--- a/templates/layout.html
+++ b/templates/layout.html
@@ -34,7 +34,22 @@
         </div>
 
         <div class="navbar-end">
+          [[if globals().get('user'):]]
           <div class="navbar-item">
+            <p>[[=globals().get('user').get('email')]]</p>
+          </div>
+          [[pass]]
+          <div class="navbar-item">
+            <div class="buttons">
+              [[if globals().get('user'):]]
+              <a class="button is-light" href="[[=URL('auth/logout')]]">Sign out</a>
+              [[else:]]
+              <a href="[[=URL('auth/plugin/oauth2google/login', vars=dict(next='../index'))]]">Sign in</a>
+              [[pass]]
+            </div>
+          </div>
+
+          <!-- <div class="navbar-item">
             <div class="buttons">
               [[if globals().get('user'):]]
                 <div class="navbar-item has-dropdown is-hoverable">
@@ -53,7 +68,8 @@
                 <a class="button is-success" href="[[=URL('auth/login')]]">Log in</a>
               [[pass]]
             </div>
-          </div>
+          </div> -->
+
         </div>
       </div>
     </nav>
